# game.libretro.mame

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml
depends/common/mame/: CMakeLists.txt  mame.txt
game.libretro.mame/: addon.xml  addon.xml.in
game.libretro.mame/resources/: settings.xml
game.libretro.mame/resources/language/English/: strings.po
gameclient.mame/: addon.xml  changelog.txt
